--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -33,7 +33,8 @@
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-project": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
