--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon backend/index.js",
-    "build": "npm install && npm install --prefix vite-project && npm run build --prefix vite-project ",
+    "build": "npm install && npm install --prefix vite-project && npm run build --prefix vite-projectgit ",
     "start": "nodemon backend/index.js"
   },
   "author": "",
